# WajuTechBrowseUse

./: .env.example  .gitignore  README_BrowserUse.md  agent.py  browseuse.bat  demo_capabilities.py  github_stats_browseros.txt  quick_search.bat  requirements.txt  robust_search.py  run.bat  search_engine.py  test_browser_visible.py  test_kimi.py  test_simple.py
.claude/: settings.local.json
mcp_server/: README.md  mcp_server.py  pyproject.toml
