[project]
name = "browseuse-mcp"
version = "1.0.0"
description = "BrowseUse MCP Server - AI Browser Automation with Ollama"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "browser-use>=0.12.5",
    "ollama>=0.6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
browseuse-mcp = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]